book/tests/snapshots/snapshot__@syntax-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter department == \"Product\"\nselect [first_name, last_name]\n"
input_file: book/tests/prql/syntax-0.prql
---
SELECT
  first_name,
  last_name
FROM
  employees
WHERE
  department = 'Product'

