book/tests/snapshots/snapshot__@syntax-10.prql.snap
---
source: book/tests/snapshot.rs
expression: "prql target:sql.mysql\nfrom employees\nselect `first name`\n"
input_file: book/tests/prql/syntax-10.prql
---
SELECT
  `first name`
FROM
  employees

