book/tests/snapshots/snapshot__@syntax-11.prql.snap
---
source: book/tests/snapshot.rs
expression: "prql target:sql.postgres\nfrom employees\nselect `first name`\n"
input_file: book/tests/prql/syntax-11.prql
---
SELECT
  "first name"
FROM
  employees

