book/tests/snapshots/snapshot__@syntax-12.prql.snap
---
source: book/tests/snapshot.rs
expression: "from `dir/*.parquet`\n"
input_file: book/tests/prql/syntax-12.prql
---
SELECT
  *
FROM
  "dir/*.parquet"

