book/tests/snapshots/snapshot__@syntax-14.prql.snap
---
source: book/tests/snapshot.rs
expression: "from `music.albums`\n"
input_file: book/tests/prql/syntax-14.prql
---
SELECT
  *
FROM
  music.albums

