book/tests/snapshots/snapshot__@syntax-15.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter id == $1\n"
input_file: book/tests/prql/syntax-15.prql
---
SELECT
  *
FROM
  employees
WHERE
  id = $1

